Add transaction workload, rollback assertions, and server-side measurement
The guide measured a single prepared point SELECT from the client. This adds a
multi-statement transaction workload, proves that a failed transaction rolls
back, and moves the reported numbers to Snowflake telemetry.

- New setup step adds ICECREAM_ORDER_AUDIT and an update_scoops Inline Stored
  Procedure, so there is a two-table atomic unit of work to measure. Notes the
  constraints readers will otherwise hit: a CHECK constraint on a hybrid table
  must be declared at create time, CURRENT_TIMESTAMP() is unavailable inside an
  Inline Stored Procedure, and bind variables must appear bare in VALUES.
- Add a Transaction Workload: drives the procedure with bound parameters via a
  Callable Statement, and notes that the call requires autocommit.
- Assert That a Failed Transaction Rolls Back: violates the CHECK constraint,
  asserts on error number 1185 rather than the constraint name, then re-reads
  the row to confirm nothing was written. Explains why this group ships
  disabled: the Response Time Graph listener is at test plan level, so
  deliberate failures would land in the measured latency.
- Measure From Snowflake Telemetry: correlates each workload by QUERY_TAG and
  reads latency percentiles and throughput from AGGREGATE_QUERY_HISTORY, which
  records every execution. Notes the account_usage lag, and that QUERY_HISTORY
  does not record every fast query so it undercounts and skews slow.
- Adds the Arrow --add-opens JVM option, without which every sampler fails on
  newer JDKs, and a teardown reminder covering the key-pair test user.

Every SQL step was run in order as written, with no failures. The test plan was
driven against that environment: 84 samples and 0 failures in measurement mode,
87 samples with 1 deliberate failure and both assertions passing in rollback
mode. Observed the transaction workload at p50 89ms against the point lookup at
p50 20ms, with no row store throttling.